# metavoice-src

./: .gitignore  .pre-commit-config.yaml  Adi  Ai to you  Ashish  Dockerfile  MANIFEST.in  README.md  app.py  colab_demo.ipynb  dataloader.py  docker-compose.yml  lora.py  pyproject.toml  requirements.txt  serving.py  setup.py  train.py  آزمون برگ درختان  ریاضی  مو
.github/workflows/: build.yml  sync-with-upstream.yml
assets/: GER_F_SylviaF.flac  ava.flac  barackobamafederalplaza.flac
datasets/: sample_dataset.csv  sample_val_dataset.csv
dummy_dataset/: p311_001.txt  p311_002.txt  p311_003.txt  p311_004.txt  p311_005.txt  p311_006.txt  p311_007.txt  p311_008.txt  p311_009.txt  p311_010.txt  p311_011.txt  p311_012.txt  p311_013.txt  p311_014.txt  p311_015.txt  p311_016.txt  p311_017.txt  p311_018.txt  p311_019.txt  p311_020.txt  p311_021.txt  p311_022.txt  p311_023.txt  p311_024.txt  p311_025.txt
fam/llm/: .gitattributes  app.py  client.py  decoder.pt  decoder_config.json  decoders.py  enhancers.py  fast_inference.py  fast_inference_utils.py  fast_model.py  fast_quantize.py  finetune.py  gptfast_inference.py  gptfast_model.py  gptfast_sample_utils.py  inference.py  model.py  model_decoder.py  sample.py  serving.py  utils.py
fam/llm/adapters/: __init__.py  base.py  flattened_encodec.py  tilted_encodec.py
fam/llm/config/: finetune_params.py
fam/llm/layers/: __init__.py  attn.py  combined.py  layers.py
fam/llm/loaders/: training_data.py
fam/llm/mixins/: __init__.py  causal.py  gpt2loading.py  non_causal.py
fam/llm/preprocessing/: audio_token_mode.py  data_pipeline.py
fam/quantiser/audio/speaker_encoder/: audio.py  model.py
fam/quantiser/text/: tokenise.py
fam/telemetry/: README.md  __init__.py  posthog.py
fam/ui/: app.py
tests/llm/loaders/: test_dataloader.py
tests/resources/datasets/: sample_dataset.csv
