[tool.poetry]
name = "fam"
version = "0.1.0"
description = "Foundational model for text to speech"
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.1.0"
torchaudio = "^2.1.0"
librosa = "^0.10.1"
tqdm = "^4.66.2"
tiktoken = "==0.5.1"
audiocraft = "^1.2.0"
numpy = "^1.26.4"
ninja = "^1.11.1"
fastapi = "^0.110.0"
uvicorn = "^0.27.1"
tyro = "^0.7.3"
deepfilternet = "^0.5.6"
pydub = "^0.25.1"
gradio = "^4.20.1"
huggingface_hub = "^0.21.4"
click = "^8.1.7"
wandb = { version = "^0.16.4", optional = true }
posthog = "^3.5.0"
python-dotenv = "^1.0.1"

[tool.poetry.dev-dependencies]
pre-commit = "^3.7.0"
pytest = "^8.0.2"
ipdb = "^0.13.13"

[tool.poetry.extras]
observable = ["wandb"]

[tool.poetry.scripts]
finetune = "fam.llm.finetune:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.tox
  | _build
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"

